[package]
name = "sctp"
version = "0.1.0"
edition = "2021"
description = "Async Rust wrapper around Linux kernel SCTP (lksctp)"
license = "MIT"
repository = "https://github.com/killdashnine/sctp"

[dependencies]
libc = "0.2"
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros", "io-util"] }
thiserror = "2"
